# python-wubi

./: .gitignore  README.md  README.rst  README_CN.md  README_EN.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
pywubi/: __init__.py  __version__.py  constants.py  core.py  loader.py  user_dict.py  utils.py  utlis.py  wubi_dict.py
pywubi/data/: wubi_86.json
resource/: 86版_全码.txt
tests/: test_core.py  test_loader.py  test_user_dict.py  test_utils.py
