[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pywubi"
version = "0.2.0"
description = "汉字五笔转换模块/工具"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    {name = "sfyc23", email = "sfyc23@gmail.com"},
]
keywords = ["wubi", "五笔", "chinese", "encoding"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
]

[project.urls]
Homepage = "https://github.com/sfyc23/python-wubi"
Repository = "https://github.com/sfyc23/python-wubi"
Issues = "https://github.com/sfyc23/python-wubi/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["pywubi*"]

[tool.setuptools.package-data]
pywubi = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
